<resources>
    <!-- Strings for Login/Register Screen -->
    <string name="app_name">JARSpeed</string>
    <string name="name_hint">Nom</string>
    <string name="firstname_hint">Prénom</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Mot de passe</string>
    <string name="new_password_hint">Nouveau mot de passe</string>
    <string name="password_confirmation_hint">Confirmer mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="no_account">Pas de compte ?</string>
    <string name="already_account">Déjà un commpte ?</string>

    <string name="register">S\'inscrire</string>
    <string name="loginRegister">Se connecter</string>


    <!-- Error messages and other strings -->
    <string name="error_field_required">Ce champ est requis</string>
    <string name="error_invalid_email">Cette adresse e-mail semble invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_network">Erreur de réseau</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="action_sign_up_short">Inscription</string>
    <string name="permission_rationale">L\'autorisation est nécessaire pour accéder à la fonctionnalité</string>

    <!-- Other common strings -->
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="confirm">Confirmer</string>
    <string name="debut">Date de Début</string>
    <string name="distance">Distance</string>
    <string name="allure">Vitesse moyenne</string>
    <string name="duree">Duree</string>
    <string name="fin">Date de Fin</string>
    <string name="poi">Points d\'intérêts</string>
    <string name="date_debut">Date de début</string>
    <string name="date_fin">Date de fin</string>

    <!-- Strings for Profil Screen -->
    <string name="myProfil">Mon profil</string>
    <string name="myRoutes">Mes parcours</string>
    <string name="logout">Se déconnecter</string>
    <string name="deleteAccount">Supprimer compte</string>


    <!-- Strings for Edit Profil Screen -->
    <string name="dataHealth">Données corporelles</string>
    <string name="editTextOldPassword">Ancien mot de passe</string>
    <string name="newNameHint">Nouveau nom</string>
    <string name="newFirstNameHint">Nouveau prénom</string>
    <string name="newEmailHint">Nouveau mail</string>
    <string name="newAgeHint">Date de naissance</string>
    <string name="newWeightHint">Nouveau poids</string>

    <string name="preference_file_key">my_preference_file_key</string>
    <string name="saved_token">saved_token</string>

    <!-- String for save route -->
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="stopAndSave">Terminer et enregistrer</string>
    <string name="keep">Continuer</string>

    <string name="confirm_supp_account">Confirmez-vous la suppression définitive de votre compte ?</string>

    <!-- String for Pop Up -->
    <string name="popUpPauseString">Voulez-vous arréter votre activité ?</string>
    <string name="route_register">Le parcours a bien été enregistré.</string>
    <string name="popUpPointOfInterestCancel">Annuler</string>
    <string name="popUpPointOfInterestValide">Créer point</string>


    <string name="hintTitre">Titre du parcours</string>
    <string name="hintDescription">Description du parcours</string>
    <string name="enregistrer">Enregistrer</string>

    <string name="timer_default">00 : 00 : 00</string>
    <string name="kilometers_distance">0,0 km</string>
    <string name="kilocalories_burn">0 kcal</string>
    <string name="time_for_one_kilometer">0:00 /km</string>

    <string name="confirm_logout">Êtes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="confirm_delete_route">Êtes-vous sûr de vouloir supprimer ce parcours ?</string>
    <string name="denivel_positif">Dénivelé positif</string>
    <string name="denivel_negatif">Dénivelé négatif</string>
    <string name="titre">Titre</string>

</resources>
