<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Top section with gradient -->
    <RelativeLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/top_background_gradient"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_jarspeed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>
    </RelativeLayout>

    <!-- Connexion TextView -->
    <TextView
        android:id="@+id/tvConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up_short"
        android:layout_above="@id/cardView"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginBottom="123dp"
        android:fontFamily="@font/righteous" />

    <!-- CardView for form elements -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="326dp"
        android:layout_height="500dp"
        android:layout_below="@id/topSection"
        android:layout_marginTop="-120dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_centerHorizontal="true">

        <!-- LinearLayout for EditText elements -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/righteous"
                android:maxLength="30"
                />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/firstname_hint"
                android:inputType="text"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/righteous"
                android:maxLength="30"
                />
            <!-- Email EditText -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/righteous"
                android:maxLength="45"
                />

            <!-- Password EditText -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="7dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/righteous" />

            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/password_confirmation_hint"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="7dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/righteous" />
        </LinearLayout>

        <!-- RelativeLayout for Button and TextView -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="bottom">

            <!-- Login Button -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient"
                android:text="@string/register"
                android:textColor="@color/white"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:minHeight="10dp"
                android:minWidth="10dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/righteous"
                android:onClick="onRegisterClick" />

            <!-- Container for the registration prompts -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/registerButton"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <!-- Register Prompt TextView -->
                <TextView
                    android:id="@+id/tvNoAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_account"
                    android:textColor="@color/black"
                    android:fontFamily="@font/righteous" />

                <!-- Register Action TextView -->
                <TextView
                    android:id="@+id/registerPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginRegister"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/righteous"
                    android:layout_marginStart="4dp"
                    android:onClick="onLoginClick"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
