<!-- res/layout/password_dialog.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_gradient"
        android:padding="4dp">
        <!-- CardView for form elements -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/editTextOldPassword"
                    android:inputType="textPassword"
                    android:hint="@string/editTextOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:minHeight="48dp"
                    android:background="@drawable/edittext_background"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:minHeight="48dp"
                    android:background="@drawable/edittext_background"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"/>


                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password_confirmation_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:layout_marginBottom="24dp"
                    android:minHeight="48dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"/>

                <Button
                    android:id="@+id/buttonCancel"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_with_border_gradient"
                    android:textColor="@color/gradient_button_start"
                    android:fontFamily="@font/righteous"
                    android:minWidth="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <Button
                    android:id="@+id/buttonConfirm"
                    android:text="@string/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_gradient"
                    android:fontFamily="@font/righteous"
                    android:minWidth="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="22dp"
                    android:paddingTop="10dp"
                    android:paddingRight="22dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
