<!-- res/layout/nom_dialog.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_gradient"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="14dp"
                    android:maxLength="40"
                    />

                <!-- Boutons Stop and save et Cancel -->
                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:padding="14dp" />

                <Button
                    android:id="@+id/buttonStopAndSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_gradient"
                    android:fontFamily="@font/righteous"
                    android:minWidth="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="22dp"
                    android:paddingTop="10dp"
                    android:paddingRight="22dp"
                    android:paddingBottom="10dp"
                    android:text="@string/stopAndSave"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="227dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_with_border_gradient"
                    android:fontFamily="@font/righteous"
                    android:minWidth="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/keep"
                    android:textColor="@color/gradient_button_start" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
