<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_gradient"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/newAgeHint"
                    android:padding="14dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:entries="@array/gender_options"
                    android:padding="14dp"/>

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/newWeightHint"
                    android:inputType="numberDecimal"
                    android:padding="14dp" />

                <!-- Boutons Annuler et Confirmer -->
                <Button
                    android:id="@+id/buttonCancelHealthData"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_with_border_gradient"
                    android:textColor="@color/gradient_button_start"
                    android:fontFamily="@font/righteous"
                    android:minWidth="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/buttonConfirmHealthData"
                    android:text="@string/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_gradient"
                    android:fontFamily="@font/righteous"
                    android:minWidth="10dp"
                    android:minHeight="10dp"
                    android:paddingLeft="22dp"
                    android:paddingTop="10dp"
                    android:paddingRight="22dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
